tests/fixtures/invalid/parenthesized_pointer_typedef_alias.c
typedef int (*Row)[3];

int main(void) {
    return 0;
}
